--- a/tac_lite.routing.yml
+++ b/tac_lite.routing.yml
@@ -15,6 +15,8 @@ tac_lite.user_access:
     _permission: 'administer tac_lite'
     _entity_access: 'user.view'
     user: \d+
+  options:
+    _admin_route: TRUE
 
 route_callbacks:
   - '\Drupal\tac_lite\Routing\TacLiteSchemes::routes'
