--- a/tac_lite.info.yml
+++ b/tac_lite.info.yml
@@ -3,6 +3,6 @@ description: Simple access control based on categories.
 package: Access control
 configure: tac_lite.administration
 type: module
-core_version_requirement: ^8 || ^9 || ^10
+core_version_requirement: ^10 || ^11
 dependencies:
   - drupal:taxonomy
