--- a/tac_lite_create/tac_lite_create.info.yml
+++ b/tac_lite_create/tac_lite_create.info.yml
@@ -3,7 +3,7 @@ description: Hide taxonomy terms on node add/edit forms.
 package: Access control
 
 type: module
-core_version_requirement: ^8 || ^9 || ^10
+core_version_requirement: ^10 || ^11
 
 dependencies:
   - tac_lite:tac_lite
